--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
         <img src="images/me.png" alt="Cedric S." />
         <h1>Cedric Slavin</h1>
         <h2>Computer Engineering Student</h2>
+        <br>
         <a href="images/resume.pdf" class="resume-link" target="_blank">View My Resume</a>
+        <br>
+        <br>
+        <a href="https://github.com/cswxyz" class="resume-link" target="_blank">Visit my Github</a>
     </div>
 
     <!-- Projects Section -->
