--- a/index.html
+++ b/index.html
@@ -5,93 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cswxyz.github.io</title>
     <link rel="icon" type="image/png" href="images/united-states.png">
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            color: #fff;
-            background-color: #121212;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            flex-direction: column;
-            text-align: center;
-        }
-        #root {
-            width: 80%;
-            max-width: 900px;
-        }
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-        .header {
-            margin-bottom: 50px;
-        }
-        .header img {
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-        }
-        .header h2 {
-            font-size: 1.8em;
-            margin: 10px 0;
-        }
-        .resume-link {
-            font-size: 1.2em;
-            color: #4CAF50;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-        .resume-link:hover {
-            color: #81c784;
-        }
-        .projects {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-        }
-        .top-projects {
-            display: grid;
-            gap: 20px;
-            grid-template-columns: repeat(3, 1fr);
-            width: 100%;
-        }
-        .bottom-projects {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            width: 100%;
-        }
-        .project-card {
-            background-color: #1e1e1e;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s;
-            width: 100%;
-            max-width: 250px;
-        }
-        .project-card:hover {
-            transform: scale(1.05);
-        }
-        .project-image {
-            width: 100%;
-            border-radius: 8px;
-            margin-bottom: 10px;
-        }
-        .project-title {
-            font-size: 1.3em;
-            margin: 10px 0;
-        }
-        .project-description {
-            font-size: 1em;
-            color: #b3b3b3;
-        }
-    </style>
+    <link rel="stylesheet" href="statics/styles.css">
 </head>
 <body>
 
@@ -116,115 +30,6 @@
     </div>
 </div>
 
-<script>
-    const projects = [
-        {
-            title: "Guitar Image Classifier",
-            imageUrl: "images/guitarn.gif",
-            description: "Simple fine-tuned neural network to classify Fender's big three electric guitars",
-            links: [
-                { text: "GitHub Repo", url: "https://github.com/cswxyz/guitarNeuralNetwork" },
-                { text: "Project Demo", url: "https://guitarneuralnetwork.onrender.com/" }
-            ]
-        },
-        {
-            title: "2D Platformer (In Progress)",
-            imageUrl: "images/super-mario-video-game.gif",
-            description: "Technically demanding platformer inspired by artistic level design and fighting game mechanics"
-        },
-        {
-            title: "Autonomous Vehicle Reinforcement Learning",
-            imageUrl: "images/success.gif",
-            description: "Hackathon research project, simple reward-based learning approach to vehicle driving",
-            links: [
-                { text: "Abstract", url: "images/hackresearchwin.pdf" },
-                { text: "GitHub Repo", url: "https://github.com/cswxyz/hackresearch2024" }
-            ]
-        },
-        {
-            title: "Chip8 Emulator",
-            imageUrl: "images/chip8emulator.jpg",
-            description: "Simple emulator for classic retro games",
-            links: [
-                { text: "GitHub Repo", url: "https://github.com/cswxyz/chip8emulator" }
-            ]
-        },
-        {
-            title: "Preventing Opioid Abuse",
-            imageUrl: "images/opioidabuse.jpg",
-            description: "Pill bottle constrained by time, to prevent overuse of prescription drugs"
-        }
-    ];
-
-    function displayProjects() {
-        const topProjectsContainer = document.getElementById('top-projects');
-        const bottomProjectsContainer = document.getElementById('bottom-projects');
-
-        projects.forEach((project, index) => {
-            const projectCard = document.createElement('div');
-            projectCard.className = 'project-card';
-
-            const projectImage = document.createElement('img');
-            projectImage.src = project.imageUrl;
-            projectImage.alt = project.title;
-            projectImage.className = 'project-image';
-
-            const projectTitle = document.createElement('div');
-            projectTitle.className = 'project-title';
-            projectTitle.textContent = project.title;
-
-            const projectDescription = document.createElement('p');
-            projectDescription.className = 'project-description';
-            projectDescription.textContent = project.description;
-
-            projectCard.appendChild(projectImage);
-            projectCard.appendChild(projectTitle);
-            projectCard.appendChild(projectDescription);
-
-            // Add multiple links if the project has them
-            if (project.links) {
-                const linksContainer = document.createElement('div');
-                linksContainer.className = 'project-links';
-                linksContainer.style.marginTop = '10px'; // Adds space between description and links
-
-                project.links.forEach(link => {
-                    const linkElement = document.createElement('a');
-                    linkElement.href = link.url;
-                    linkElement.textContent = link.text;
-                    linkElement.target = "_blank"; // Opens link in new tab
-                    linkElement.className = 'project-link';
-                    linkElement.style.color = '#4CAF50';
-                    linkElement.style.textDecoration = 'none';
-                    linkElement.style.display = 'block'; // Display each link on a new line
-                    linkElement.style.marginTop = '5px'; // Adds spacing between links
-
-                    linksContainer.appendChild(linkElement);
-                });
-
-                projectCard.appendChild(linksContainer);
-            }
-
-            if (index < 3) {
-                topProjectsContainer.appendChild(projectCard);
-            } else {
-                bottomProjectsContainer.appendChild(projectCard);
-            }
-        });
-    }
-
-    // Call the function to display the projects on page load
-    displayProjects();
-</script>
-
-<style>
-    /* Additional style for links */
-    .project-link:hover {
-        color: #81c784;
-    }
-</style>
-
-
-
-
+<script src="statics/scripts.js"></script>
 </body>
 </html>
