showing ferny github

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <div class="header">
         <img src="images/me.png" alt="Cedric S." />
-        <h1>Cedric Slavin</h1>
+        <h1>Cedric M. Slavin</h1>
         <h2>Computer Engineering Student</h2>
         <br>
         <a href="images/resume.pdf" class="resume-link" target="_blank">View My Resume</a>
