--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cswxyz.github.io</title>
+    <title>Cedric Slavin's Portfolio</title>
     <link rel="icon" type="image/png" href="images/united-states.png">
     <link rel="stylesheet" href="statics/styles.css">
 </head>
@@ -12,14 +12,17 @@
 <div id="root">
     <!-- Header Section -->
     <div class="header">
-        <img src="images/me.png" alt="Cedric S." />
-        <h1>Cedric M. Slavin</h1>
-        <h2>Computer Engineering Student</h2>
-        <br>
-        <a href="images/resume.pdf" class="resume-link" target="_blank">View My Resume</a>
-        <br>
-        <br>
-        <a href="https://github.com/cswxyz" class="resume-link" target="_blank">Visit my Github</a>
+        <div class="header-content">
+            <img src="images/me.png" alt="Cedric S." class="profile-img" />
+            <div class="header-text">
+                <h1>Cedric M. Slavin</h1>
+                <h2>Computer Engineering Student</h2>
+                <div class="button-container">
+                    <a href="images/resume.pdf" class="resume-link" target="_blank">View My Resume</a>
+                    <a href="https://github.com/cswxyz" class="github-link" target="_blank">Visit My Github</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Projects Section -->
