Add showcase links and soften color palette

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h2>Showcases</h2>
             <div class="showcases-grid">
 
-                <a href="#" class="showcase-card" target="_blank">
+                <a href="https://theflavorcompound.com" class="showcase-card" target="_blank">
                     <div class="showcase-number">01</div>
                     <div class="showcase-content">
                         <h3>Local Business</h3>
@@ -127,7 +127,7 @@
                     <span class="showcase-arrow">&rarr;</span>
                 </a>
 
-                <a href="#" class="showcase-card" target="_blank">
+                <a href="https://event-concept.onrender.com" class="showcase-card" target="_blank">
                     <div class="showcase-number">02</div>
                     <div class="showcase-content">
                         <h3>Event & Booking</h3>
@@ -136,7 +136,7 @@
                     <span class="showcase-arrow">&rarr;</span>
                 </a>
 
-                <a href="#" class="showcase-card" target="_blank">
+                <a href="https://course-concept.onrender.com" class="showcase-card" target="_blank">
                     <div class="showcase-number">03</div>
                     <div class="showcase-content">
                         <h3>Learning Platform</h3>
