Add tracer demo gif, remove dead links

--- a/index.html
+++ b/index.html
@@ -60,18 +60,13 @@
                 <!-- Tracer - ML Boxing Pipeline -->
                 <article class="project-card project-featured">
                     <div class="project-card--image">
-                        <div class="image-placeholder">
-                            <span>tracer preview</span>
-                        </div>
+                        <img src="images/full_pipeline_demo.gif" alt="Tracer Pipeline Demo">
                     </div>
                     <div class="project-content">
                         <div class="project-status">Ongoing</div>
                         <h3>Tracer</h3>
                         <p class="project-subtitle">ML Boxing Pipeline</p>
                         <p class="project-description">Machine learning pipeline for boxing analysis and motion tracking. Computer vision meets combat sports.</p>
-                        <div class="project-links">
-                            <a href="https://github.com/cswxyz/tracer" class="btn btn-primary" target="_blank">View Project</a>
-                        </div>
                     </div>
                 </article>
 
@@ -89,7 +84,6 @@
                         <p class="project-description">Fine-tuned neural network to classify Fender's big three electric guitars. Simple, effective, accurate.</p>
                         <div class="project-links">
                             <a href="https://github.com/cswxyz/guitarNeuralNetwork" class="btn btn-secondary" target="_blank">GitHub</a>
-                            <a href="https://guitarneuralnetwork.onrender.com/" class="btn btn-secondary" target="_blank">Demo</a>
                         </div>
                     </div>
                 </article>
