Update about section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="about" class="section section-about">
         <div class="section-content">
             <h2>About</h2>
-            <p>Computer engineering student focused on machine learning, neural networks, and building efficient systems. I care about clean code, thoughtful design, and solutions that actually work.</p>
+            <p>Full stack developer and machine learning engineer from the Rio Grande Valley. Building things that work.</p>
         </div>
     </section>
 
