--- a/services.html
+++ b/services.html
@@ -14,9 +14,8 @@
       <a href="index.html" class="nav-logo">csz</a>
       <ul class="nav-links">
         <li><a href="index.html#about">about</a></li>
+        <li><a href="index.html#work">work</a></li>
         <li><a href="index.html#ml-projects">ml</a></li>
-        <li><a href="index.html#fullstack-projects">full stack</a></li>
-        <li><a href="index.html#showcases">showcases</a></li>
         <li><a href="services.html" class="active">services</a></li>
         <li><a href="https://github.com/cswxyz" target="_blank" rel="noopener">github</a></li>
       </ul>
