--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <ul class="nav-links">
         <li><a href="#about">about</a></li>
+        <li><a href="#work">work</a></li>
         <li><a href="#ml-projects">ml</a></li>
-        <li><a href="#fullstack-projects">full stack</a></li>
-        <li><a href="#showcases">showcases</a></li>
         <li><a href="services.html">services</a></li>
         <li><a href="https://github.com/cswxyz" target="_blank" rel="noopener">github</a></li>
       </ul>
@@ -37,24 +36,107 @@
           </div>
           <div class="hero-text">
             <h1>csz</h1>
-            <p class="tagline">Full Stack & Machine Learning Engineer</p>
+            <p class="tagline">Full Stack / Machine Learning Developer</p>
             <p class="bio">
-              Building ML pipelines and full-stack web applications
-            </p>
-            <p>
+              Building modern, sleek web solutions for local businesses
             </p>
             <p class="bio">
               Based in the Rio Grande Valley
             </p>
             <div class="hero-action">
-              <a href="images/resume.pdf" class="btn btn-primary" target="_blank">View Resume</a>
+              <a href="services.html" class="btn btn-primary btn-lg">View Services & Pricing</a>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="ml-projects" class="section">
+    <section id="work" class="section">
+      <div class="container">
+        <h2 class="section-title">Recent Work</h2>
+        <div class="projects-grid">
+
+          <article class="project-card">
+            <div class="project-preview">
+              <img src="images/sesa.png" alt="SESA Fleet Services">
+            </div>
+            <div class="project-info">
+              <h3>SESA Fleet Services</h3>
+              <p class="project-subtitle">Fleet Management Company</p>
+              <p>Professional business site for Texas-based fleet maintenance company. Clean layout, client showcases, careers page.</p>
+              <div class="project-tags">
+                <span class="tag">Business</span>
+                <span class="tag">Corporate</span>
+                <span class="tag">Responsive</span>
+              </div>
+              <div class="project-links">
+                <a href="https://www.sesafleetservices.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="project-card">
+            <div class="project-preview">
+              <img src="images/tfc.png" alt="The Flavor Compound">
+            </div>
+            <div class="project-info">
+              <h3>The Flavor Compound</h3>
+              <p class="project-subtitle">Local Bakery</p>
+              <p>Clean branding, mobile-friendly design with quote form. Custom bakery website with interactive order builders.</p>
+              <div class="project-tags">
+                <span class="tag">Business</span>
+                <span class="tag">E-commerce</span>
+                <span class="tag">Forms</span>
+              </div>
+              <div class="project-links">
+                <a href="https://theflavorcompound.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="project-card">
+            <div class="project-preview">
+              <img src="images/event.png" alt="Event & Booking Platform">
+            </div>
+            <div class="project-info">
+              <h3>Event & Booking Platform</h3>
+              <p class="project-subtitle">Event Planning Template</p>
+              <p>Animated UI, RSVP flow, dynamic interactions. Elegant event planning template with countdown and schedule cards.</p>
+              <div class="project-tags">
+                <span class="tag">Template</span>
+                <span class="tag">Animations</span>
+                <span class="tag">RSVP</span>
+              </div>
+              <div class="project-links">
+                <a href="https://event-concept.onrender.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="project-card">
+            <div class="project-preview">
+              <img src="images/course.png" alt="Learning Platform">
+            </div>
+            <div class="project-info">
+              <h3>Learning Platform</h3>
+              <p class="project-subtitle">Educational Web App</p>
+              <p>User auth, course modules, progress tracking. Interactive educational platform with quizzes and visualizations.</p>
+              <div class="project-tags">
+                <span class="tag">Auth</span>
+                <span class="tag">Dashboard</span>
+                <span class="tag">Interactive</span>
+              </div>
+              <div class="project-links">
+                <a href="https://course-concept.onrender.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
+              </div>
+            </div>
+          </article>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="ml-projects" class="section section-alt">
       <div class="container">
         <h2 class="section-title">ML Projects</h2>
         <div class="projects-grid">
@@ -117,160 +199,6 @@
             </div>
           </article>
 
-        </div>
-      </div>
-    </section>
-
-    <section id="fullstack-projects" class="section section-alt">
-      <div class="container">
-        <h2 class="section-title">Full Stack Projects</h2>
-        <div class="projects-grid">
-
-          <article class="project-card">
-            <div class="project-preview">
-              <img src="images/sesa.png" alt="SESA Fleet Services">
-            </div>
-            <div class="project-info">
-              <h3>SESA Fleet Services</h3>
-              <p class="project-subtitle">Fleet Management</p>
-              <p>Professional business site for Texas-based fleet maintenance company. Clean layout, client showcases, careers page.</p>
-              <div class="project-tags">
-                <span class="tag">Business</span>
-                <span class="tag">Corporate</span>
-                <span class="tag">Responsive</span>
-              </div>
-              <div class="project-links">
-                <a href="https://www.sesafleetservices.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
-              </div>
-            </div>
-          </article>
-
-          <article class="project-card">
-            <div class="project-preview">
-              <img src="images/tfc.png" alt="The Flavor Compound">
-            </div>
-            <div class="project-info">
-              <h3>The Flavor Compound</h3>
-              <p class="project-subtitle">Local Business</p>
-              <p>Clean branding, mobile-friendly design with quote form. Custom bakery website with interactive order builders.</p>
-              <div class="project-tags">
-                <span class="tag">Business</span>
-                <span class="tag">E-commerce</span>
-                <span class="tag">Forms</span>
-              </div>
-              <div class="project-links">
-                <a href="https://theflavorcompound.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
-              </div>
-            </div>
-          </article>
-
-          <article class="project-card">
-            <div class="project-preview">
-              <img src="images/event.png" alt="Event & Booking Platform">
-            </div>
-            <div class="project-info">
-              <h3>Event & Booking Platform</h3>
-              <p>Animated UI, RSVP flow, dynamic interactions. Elegant event planning template with countdown and schedule cards.</p>
-              <div class="project-tags">
-                <span class="tag">Template</span>
-                <span class="tag">Animations</span>
-                <span class="tag">RSVP</span>
-              </div>
-              <div class="project-links">
-                <a href="https://event-concept.onrender.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
-              </div>
-            </div>
-          </article>
-
-          <article class="project-card">
-            <div class="project-preview">
-              <img src="images/course.png" alt="Learning Platform">
-            </div>
-            <div class="project-info">
-              <h3>Learning Platform</h3>
-              <p>User auth, course modules, progress tracking. Interactive educational platform with quizzes and visualizations.</p>
-              <div class="project-tags">
-                <span class="tag">Auth</span>
-                <span class="tag">Dashboard</span>
-                <span class="tag">Interactive</span>
-              </div>
-              <div class="project-links">
-                <a href="https://course-concept.onrender.com" target="_blank" rel="noopener" class="btn btn-primary">View Live</a>
-              </div>
-            </div>
-          </article>
-
-        </div>
-      </div>
-    </section>
-
-    <section id="showcases" class="section">
-      <div class="container">
-        <h2 class="section-title">Showcases</h2>
-        <p class="section-desc">Live examples in production</p>
-        <div class="showcases-grid">
-          <a href="https://www.sesafleetservices.com" target="_blank" rel="noopener" class="showcase-item">
-            <div class="showcase-icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <rect x="1" y="3" width="15" height="13" rx="2"/>
-                <path d="M16 8h4l3 3v5h-7V8z"/>
-                <circle cx="5.5" cy="18.5" r="2.5"/>
-                <circle cx="18.5" cy="18.5" r="2.5"/>
-              </svg>
-            </div>
-            <div class="showcase-info">
-              <h3>sesafleetservices.com</h3>
-              <p>Fleet management corporate site</p>
-            </div>
-            <span class="showcase-arrow">&#8594;</span>
-          </a>
-
-          <a href="https://theflavorcompound.com" target="_blank" rel="noopener" class="showcase-item">
-            <div class="showcase-icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M12 2L2 7l10 5 10-5-10-5z"/>
-                <path d="M2 17l10 5 10-5"/>
-                <path d="M2 12l10 5 10-5"/>
-              </svg>
-            </div>
-            <div class="showcase-info">
-              <h3>theflavorcompound.com</h3>
-              <p>Local business with order builder</p>
-            </div>
-            <span class="showcase-arrow">&#8594;</span>
-          </a>
-
-          <a href="https://event-concept.onrender.com" target="_blank" rel="noopener" class="showcase-item">
-            <div class="showcase-icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <rect x="3" y="4" width="18" height="18" rx="2"/>
-                <line x1="16" y1="2" x2="16" y2="6"/>
-                <line x1="8" y1="2" x2="8" y2="6"/>
-                <line x1="3" y1="10" x2="21" y2="10"/>
-              </svg>
-            </div>
-            <div class="showcase-info">
-              <h3>event-concept.onrender.com</h3>
-              <p>Event booking with animated UI</p>
-            </div>
-            <span class="showcase-arrow">&#8594;</span>
-          </a>
-
-          <a href="https://course-concept.onrender.com" target="_blank" rel="noopener" class="showcase-item">
-            <div class="showcase-icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <rect x="3" y="3" width="7" height="7"/>
-                <rect x="14" y="3" width="7" height="7"/>
-                <rect x="3" y="14" width="7" height="7"/>
-                <rect x="14" y="14" width="7" height="7"/>
-              </svg>
-            </div>
-            <div class="showcase-info">
-              <h3>course-concept.onrender.com</h3>
-              <p>Learning platform with auth</p>
-            </div>
-            <span class="showcase-arrow">&#8594;</span>
-          </a>
         </div>
       </div>
     </section>
