--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
     <div class="container">
       <a href="index.html" class="nav-logo">csz</a>
       <ul class="nav-links">
-        <li><a href="index.html">home</a></li>
+        <li><a href="index.html#work">work</a></li>
         <li><a href="projects.html">projects</a></li>
         <li><a href="services.html">services</a></li>
-        <li><a href="https://github.com/cswxyz" target="_blank" rel="noopener">github</a></li>
+        <li><a href="contact.html" class="active">contact</a></li>
       </ul>
     </div>
   </nav>
@@ -34,63 +34,66 @@
         <div class="contact-info-panel">
           <h2>Let's Build Something</h2>
           <p>I'm currently taking on new projects for local businesses in the Rio Grande Valley and beyond.</p>
-          <div class="contact-details">
-            <div class="contact-detail">
+          <a href="services.html" class="btn btn-secondary">View Services & Pricing</a>
+        </div>
+
+        <div class="contact-split">
+          <div class="contact-column">
+            <a href="mailto:cedricslavin@gmail.com" class="contact-card">
+              <div class="contact-card-icon">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <rect x="2" y="4" width="20" height="16" rx="2"/>
+                  <path d="M22 6l-10 7L2 6"/>
+                </svg>
+              </div>
+              <div class="contact-card-content">
+                <h3>Email</h3>
+                <p>cedricslavin@gmail.com</p>
+                <span class="contact-card-action">Send an email</span>
+              </div>
+            </a>
+
+            <a href="tel:9563582378" class="contact-card">
+              <div class="contact-card-icon">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z"/>
+                </svg>
+              </div>
+              <div class="contact-card-content">
+                <h3>Phone</h3>
+                <p>(956) 358-2378</p>
+                <span class="contact-card-action">Give me a call</span>
+              </div>
+            </a>
+
+            <a href="https://github.com/cswxyz" target="_blank" rel="noopener" class="contact-card">
+              <div class="contact-card-icon">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"/>
+                </svg>
+              </div>
+              <div class="contact-card-content">
+                <h3>GitHub</h3>
+                <p>@cswxyz</p>
+                <span class="contact-card-action">View my code</span>
+              </div>
+            </a>
+          </div>
+
+          <div class="contact-column contact-details-list">
+            <div class="contact-detail-block">
               <span class="detail-label">Location</span>
-              <span class="detail-value">Rio Grande Valley, TX</span>
+              <span class="detail-value">Weslaco, TX</span>
             </div>
-            <div class="contact-detail">
+            <div class="contact-detail-block">
               <span class="detail-label">Availability</span>
               <span class="detail-value available">Open to projects</span>
             </div>
-            <div class="contact-detail">
+            <div class="contact-detail-block">
               <span class="detail-label">Response Time</span>
               <span class="detail-value">Within 24 hours</span>
             </div>
           </div>
-          <a href="services.html" class="btn btn-secondary">View Services & Pricing</a>
-        </div>
-
-        <div class="contact-methods">
-          <a href="mailto:cedricslavin@gmail.com" class="contact-card">
-            <div class="contact-card-icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <rect x="2" y="4" width="20" height="16" rx="2"/>
-                <path d="M22 6l-10 7L2 6"/>
-              </svg>
-            </div>
-            <div class="contact-card-content">
-              <h3>Email</h3>
-              <p>cedricslavin@gmail.com</p>
-              <span class="contact-card-action">Send an email</span>
-            </div>
-          </a>
-
-          <a href="tel:9563582378" class="contact-card">
-            <div class="contact-card-icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z"/>
-              </svg>
-            </div>
-            <div class="contact-card-content">
-              <h3>Phone</h3>
-              <p>(956) 358-2378</p>
-              <span class="contact-card-action">Give me a call</span>
-            </div>
-          </a>
-
-          <a href="https://github.com/cswxyz" target="_blank" rel="noopener" class="contact-card">
-            <div class="contact-card-icon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"/>
-              </svg>
-            </div>
-            <div class="contact-card-content">
-              <h3>GitHub</h3>
-              <p>@cswxyz</p>
-              <span class="contact-card-action">View my code</span>
-            </div>
-          </a>
         </div>
       </div>
     </section>
@@ -103,6 +106,14 @@
           <span class="footer-logo">csz</span>
           <span class="footer-divider">/</span>
           <span class="footer-year">2025</span>
+        </div>
+        <div class="footer-contact">
+          <a href="mailto:cedricslavin@gmail.com">cedricslavin@gmail.com</a>
+          <a href="tel:9563582378">(956) 358-2378</a>
+          <a href="https://github.com/cswxyz" target="_blank" rel="noopener" class="github-link">
+            <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/></svg>
+            github
+          </a>
         </div>
       </div>
     </div>
