--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
       <a href="#" class="nav-logo">csz</a>
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
       <ul class="nav-links">
-        <li><a href="#about">about</a></li>
         <li><a href="#work">work</a></li>
         <li><a href="projects.html">projects</a></li>
         <li><a href="services.html">services</a></li>
-        <li><a href="https://github.com/cswxyz" target="_blank" rel="noopener">github</a></li>
+        <li><a href="contact.html">contact</a></li>
       </ul>
     </div>
   </nav>
@@ -61,7 +60,7 @@
           </div>
           <div class="hero-text">
             <h1>csz</h1>
-            <p class="tagline">Full Stack | Machine Learning Developer</p>
+            <h3 class="tagline">Full Stack & Machine Learning Developer</h3>
             <p class="bio">
               Building modern, sleek web solutions for local businesses
             </p>
@@ -69,7 +68,7 @@
               Based in the Rio Grande Valley
             </p>
             <div class="hero-action">
-              <a href="services.html" class="btn btn-primary btn-lg">View Services & Pricing</a>
+              <a href="services.html" class="btn btn-primary btn-lg">Services</a>
               <a href="contact.html" class="btn btn-secondary btn-lg">Contact</a>
             </div>
           </div>
@@ -150,8 +149,11 @@
         </div>
         <div class="footer-contact">
           <a href="mailto:cedricslavin@gmail.com">cedricslavin@gmail.com</a>
-          <span class="footer-divider">|</span>
           <a href="tel:9563582378">(956) 358-2378</a>
+          <a href="https://github.com/cswxyz" target="_blank" rel="noopener" class="github-link">
+            <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z"/></svg>
+            github
+          </a>
         </div>
       </div>
     </div>
